raw/RAMDHANI AZIZ FARID 6422 245150207111067/2024-11-14-08-24-29.ceg/compilation.txt
NT.java:34: error: cannot find symbol
       double angkaAwal = input.nextDouble();
                          ^
  symbol:   variable input
  location: class NT
NT.java:35: error: cannot find symbol
        double angkaTambah = input.nextDouble();
                             ^
  symbol:   variable input
  location: class NT
NT.java:36: error: cannot find symbol
        double angkaKurang = input.nextDouble();
                             ^
  symbol:   variable input
  location: class NT
NT.java:37: error: cannot find symbol
        double angkaKali = input.nextDouble();
                           ^
  symbol:   variable input
  location: class NT
NT.java:38: error: cannot find symbol
        double angkaBagi = input.nextDouble();
                           ^
  symbol:   variable input
  location: class NT
5 errors
Not compiled
